--- a/index.html
+++ b/index.html
@@ -10,8 +10,33 @@
     <h1>Metehan Yıldırım</h1>
     <h3>Hakkımda</h3>
     <p>Merhaba, ben Metehan Yıldırım. İzmir'de yaşıyorum. Web geliştirme ile ilgileniyorum. Dokuz Eylül Üniversitesi Kimya bölümü öğrencisiyim</p>
-    <h2>Sevdiğim Diziler</h2>
-    <h3>House of Cards</h3>
-    <p>House of Cards, politik drama türünde, ilk Netflix orijinal dizisidir. Michael Dobbs'un aynı adlı romanını temel alan ve BBC'de yayımlanan mini diziden uyarlanmıştır. Dizinin 13 bölümden oluşan ilk sezonu 1 Şubat 2013 tarihinde Netflix adlı video akış hizmetinde yayımlanmıştır</p>
+   
+    <h4>İlgi Alanlarım</h4>
+
+    <ol>
+        1. Film
+        <ul>
+            <li>The Wolf of Wall Street</li>
+            <li>Esaretin Bedeli</li>
+            <li>Godfather Serisi</li>
+        </ul>
+    </ol>
+    <ol>
+        2. Dizi
+        <ul>
+            <li><a href="https://www.imdb.com/title/tt1856010/">House of Cards</a></li>
+            <li>Breaking Bad</li>
+            <li>Vikings</li>
+        </ul>
+    </ol>
+    <ol>
+        3. Kitap
+        <ul>
+            <li><a href="https://www.goodreads.com/book/show/23692271-sapiens">Sapiens: Hayvanlardan Tanrılara</a></li>
+            <li>Hamlet</li>
+            <li>İlahi Komedya</li>
+        </ul>
+    </ol>
+    <img src="img/hoc.jpg" alt="House Of Cards" width="650px;" height="400px;">
 </body>
 </html>
